With all fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Compromise</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="resolve_a_dispute">Resolve a dispute</string>
+    <string name="history_of_disputes">History of disputes</string>
+    <string name="settings">Settings</string>
+
+
 </resources>
